--- a/ledger.HTML
+++ b/ledger.HTML
@@ -178,7 +178,7 @@ button:hover {
 <script>
     let web3;
     let contract;
-    const contractAddress = "0xA1C532478643c246cbdFa61747711f15E29cDe7A"; // Replace with your deployed contract address
+    const contractAddress = "0x642C26EE87be62e8398278F37807aFf2162e4D60"; 
     const contractABI = [
 	{
 		"inputs": [
